Implement an alternative for shopify capture

--- a/app/code/Satoshi/Theme/view/frontend/templates/resizable.phtml
+++ b/app/code/Satoshi/Theme/view/frontend/templates/resizable.phtml
@@ -51,7 +51,7 @@ if ($isRight) {
             id="<?= $id ?>-initial"
             class="resizable__content resizable__content--trigger"
         >
-            <?= $block->getChildHtml() ?>
+            <?= $block->getContent() ?>
         </div>
         <div
           class="resizable__content resizable__content--portal"
