--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-button.phtml
@@ -16,16 +16,22 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 $block->setData('cache_tags', $blockCacheViewModel->collectBlockChildrenCacheTags($block));
 ?>
 <button
-    x-data
-    @click="!isMenuVisible ? $store.popup.showPopup('menu') : $store.popup.hidePopup('menu')"
-    type="button"
-    class="md:button--filled-white button icon-button icon-button--size-lg md:w-auto md:px-4 md:gap-3 md:m-2"
+  @click="!isMenuVisible ? $store.popup.showPopup('menu') : $store.popup.hidePopup('menu')"
+  type="button"
+  class="md:button--filled-white button icon-button icon-button--size-lg md:w-auto md:px-4 md:gap-3 md:m-2"
 >
-    <div class="contents" x-show="!isMenuVisible">
-        <?= $hyvaicons->renderHtml('menu'); ?>
-    </div>
-    <div class="contents" x-show="isMenuVisible" style="display: none;">
-        <?= $hyvaicons->renderHtml('close'); ?>
-    </div>
-    <span class="text-md font-bold max-md:hidden"><?= __('Menu') ?></span>
+  <div
+    class="contents"
+    x-show="!isMenuVisible"
+  >
+    <?= $hyvaicons->renderHtml('menu') ?>
+  </div>
+  <div
+    class="contents"
+    x-show="isMenuVisible"
+    style="display: none;"
+  >
+    <?= $hyvaicons->renderHtml('close') ?>
+  </div>
+  <span class="text-md font-bold max-md:hidden"><?= __('Menu') ?></span>
 </button>
